# Research-Paper-Management-Analysis-System

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
core/: __init__.py  chunking.py  citation_graph.py  embeddings.py  llm_factory.py  models.py  pdf_parser.py  qa_engine.py  retrieval.py  summarizer.py  trend_analyzer.py  vector_store.py
services/: __init__.py  analysis_service.py  ingestion_service.py  search_service.py
